--- a/notebooks/session2.ipynb
+++ b/notebooks/session2.ipynb
@@ -299,9 +299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lang101",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "lang101"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
